KubeConfigs/lb/ingress-cms-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metacity-cms
  namespace: metacity
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-test
spec:
  ingressClassName: nginx
  rules:
  - host: test.cms.neodao.space
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: metacity-cms
              port:
                number: 80
  tls:
      - hosts:
          - test.cms.neodao.space
        secretName: tls-secret-cms
