KubeConfigs/lb/ingress-dashboard-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-test"
spec:
  ingressClassName: nginx  
  tls:
    - hosts:
        - test.k8s.neodao.space
      secretName: tls-secret-cms
  rules:
    - host: test.k8s.neodao.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
