KubeConfigs/lb/ingress-grafana-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: metrics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  tls:
  - hosts:
    - test.grafana.neodao.space
    secretName: grafana-tls-secret
  rules:
  - host: test.grafana.neodao.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana  
            port:
              number: 3000
