KubeConfigs/lb/ingress-graylog-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  namespace: metacity
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-test
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - test.greylog.neodao.space
    secretName: tls-secret-graylog
  rules:
  - host: test.greylog.neodao.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graylog
            port:
              number: 9000
