KubeConfigs/lb/ingress-launcher-api-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: launcher-api-ingress
  namespace: metacity
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-test
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: test.api.neodao.space
    http:
      paths:
      - path: /launcher(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: launcher-api
            port:
              number: 80
  tls:
  - hosts:
    - test.api.neodao.space
    secretName: tls-secret-test
