KubeConfigs/lb/ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: metacity
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-test
    nginx.ingress.kubernetes.io/limit-rps: "5" # 5 запросов в секунду  https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/annotations.md
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1" # множитель
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.100.0.0/16, 172.31.0.0/16" 
spec:
  ingressClassName: nginx
  rules:
  - host: test.api.neodao.space
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: metacity-backend
              port:
                number: 80
  tls:
      - hosts:
          - test.api.neodao.space
        secretName: tls-secret-test # kubectl describe certificate tls-secret-test -n metacity
